2009/12/06 Polling Processes and Sleeping the VM
  - Modified the process object to change the boolean "enabled" to an byte
    "state."
  - Added a state WASP_ACTIVE_PROCESS for processes that are actively
    executing.  This approximates the old "enabled" processes.
  - Added a state WASP_IDLE_PROCESS for processes that are waiting on a resume;
    this approximates processes that were not enabled.
  - Added a state WASP_POLL_PROCESS for processes that poll.
  - Added convenient wasp_make_poll( fn, value ) to process.c.
  - Expanded wasp_process_loop to sleep 100 microseconds when active count is
    0 but enable count is nonzero.
  - Simplified wasp_os_loop_activate to make wasp_os_poll.
  - Removed unused wasp_can_be_only_one and wasp_vm_count.

2009/12/06 Salsa/20 Cast Correction
  - Corrected an implicit pointer cast in vm/salsa.c when calling wasp_root_obj

2009/12/05 Static Compilation Improvements
  Derived from a patch supplied by Chris Double; ensures libevent is statically
  linked.

  - Factored libraries out of EXEFLAGS into STATICLIBS and DYNAMICLIBS.
  - STATICLIBS are linked with -Bstatic.
  - DYNAMICLIBS are linked with -Bdynamic.
  - Made librt an explicit dynamic dependency on Linux, indirectly required by
    libevent.

2008/12/31 Roguelike Terminal Support
  - Added (string-set! str offset byte), similar to vector-set!
  - Added (make-string str length init), which creates a string of length bytes,
    with each byte initialized to init.
  - Added (string-fill! str offset length byte), which changes length bytes,
    starting at offset, to byte.
  - Added (console-blit text foreground background) to os.c; this primitive
    will iterate over the bytes in text, printing each one with the foreground
    color and background color at the corresponding offset in foreground and
    background.  Additionally, offset and length arguments may be specified to
    restrict the data being displayed.  (For windowing functionality.)