@@ -2,6 +2,9 @@
 + BUG: waspvm depends on libevent shared object on Linux.
 + BUG: waspvm does not build in 64 bit environments.
 
++ UGLY: Stop casts to wasp_proc_fn by using the correct type for wasp_process.
++ UGLY: printf object used as value since printf doesn't support objects.
+
 ????/??/?? Polling Processes and Sleeping the VM
   + Add a flag to processes that indicates that they are "polling" processes.
   + Expand the VM loop to sleep WASP_POLL_LATENCY microseconds when all VM
